# pixel_runtime

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: dependencies.cmake  options.cmake
examples/: CMakeLists.txt  pixel_hello.cpp  pixel_mandelbrot.cpp  pixel_noise.cpp  pixel_paint.cpp  pixel_square.cpp
include/pxr/: app.h  app_entry.h  color.h  input_codes.h  math.h  pixel_runtime.h  surface.h  types.h
src/: app.cpp  error_handling.h  gl_includes.h  graphics.cpp  graphics.h  input.cpp  input.h  surface.cpp  window.cpp  window.h
src/platform/: windows_theme.cpp  windows_theme.h
